# bASIC-.NOTCORe

./: Cargo.toml  Contributing.md  License.txt  ReadMe.md  check.sh
.github/external-config/: licenserc.yml
.github/workflows/: full-ci.yml  minimal-ci.yml
assets/: asset-licenses.md
godot/: Cargo.toml
godot-codegen/: Cargo.toml
godot-codegen/input/: gdextension_interface.h  tweak.patch
godot-codegen/src/: api_parser.rs  central_generator.rs  class_generator.rs  context.rs  godot_exe.rs  godot_version.rs  lib.rs  special_cases.rs  tests.rs  util.rs  utilities_generator.rs  watch.rs
godot-core/: Cargo.toml  build.rs
godot-core/src/: bind.rs  engine.rs  lib.rs  log.rs  macros.rs  registry.rs  storage.rs
godot-core/src/builder/: method.rs  mod.rs
godot-core/src/builtin/: array.rs  basis.rs  color.rs  dictionary.rs  glam_helpers.rs  macros.rs  math.rs  mod.rs  node_path.rs  others.rs  packed_array.rs  projection.rs  quaternion.rs  string.rs  string_chars.rs  string_name.rs  transform2d.rs  transform3d.rs  vector2.rs  vector2i.rs  vector3.rs  vector3i.rs  vector4.rs  vector4i.rs  vector_macros.rs
godot-core/src/builtin/meta/: class_name.rs  mod.rs  signature.rs
godot-core/src/builtin/variant/: impls.rs  mod.rs  variant_traits.rs
godot-core/src/init/: mod.rs
godot-ffi/: Cargo.toml  build.rs
godot-ffi/src/: godot_ffi.rs  lib.rs  opaque.rs  plugins.rs
godot-macros/: Cargo.toml
godot-macros/src/: derive_godot_class.rs  gdextension.rs  godot_api.rs  itest.rs  lib.rs  util.rs
godot/src/: lib.rs
itest/godot/: ManualFfiTests.gd  TestRunner.gd  (+4 more)
(+51 files in other folders)
